--- a/canopy.html
+++ b/canopy.html
@@ -50,7 +50,7 @@
        <section class="colored">
          <div class="center">
            <div class="small-fourth align-left mobile-full">
-             <h2 class="h4 align-left">SPECS</h2>
+             <h2 class="h2 align-left">SPECS</h2>
              <ul class="med-text">
                <li class="spec">Desktop App</li>
                <li class="spec">Concept Project</li>
@@ -58,7 +58,7 @@
              </ul>
            </div>
            <div class="small-fourth align-left mobile-full">
-             <h2 class="h4 align-left">DESIGN ROLES</h2>
+             <h2 class="h2 align-left">DESIGN ROLES</h2>
              <ul class="med-text">
                <li class="spec">User Research</li>
                <li class="spec">UX Design</li>
@@ -67,7 +67,7 @@
              </ul>
            </div>
            <div class="large-fourth mobile-full">
-             <h2 class="h4 align-left">DELIVERABLES</h2>
+             <h2 class="h2 align-left">DELIVERABLES</h2>
              <ul class="med-text align-left left">
                <li class="spec">User Survey</li>
                <li class="spec">User Personas</li>
@@ -83,8 +83,8 @@
                <li class="spec">Final Prototype</li>
              </ul>
            </div>
-           <div class="small-fourth align-left mobile-full">
-             <h2 class="h4 align-left">TOOLS</h2>
+           <div class="small-fourth align-left mobile-full tools">
+             <h2 class="h2 align-left">TOOLS</h2>
              <ul class="med-text">
                <li class="spec">Figma</li>
                <li class="spec">Google Forms</li>
