--- a/canopy.html
+++ b/canopy.html
@@ -118,7 +118,7 @@
 
        <!-- Overview -->
        <section class="overview">
-         <article class="subsection">
+         <article class="subsection narrow">
            <h1>THE PROBLEMS</h1>
            <p>Our world is becoming more digital by the day, and with that,
               millions of people have growing data storage needs. While the
@@ -131,7 +131,7 @@
               <li>Expensive storage</li>
             </ul>
          </article>
-         <article class="subsection">
+         <article class="subsection narrow solutions">
            <h1>THE SOLUTIONS</h1>
            <p>I employed an iterative design approach throughout the entire
              project. By consistently testing my designs, I was able to hone
@@ -143,8 +143,9 @@
               <li>Allow users to organize web content organization</li>
               <li>Provide ample free storage</li>
             </ul>
-            <img class="final-mockups" src="images/hifi-mockups-final.png" alt="final hifi mockups">
+
          </article>
+         <img class="final-mockups" src="images/hifi-mockups-final.png" alt="final hifi mockups">
        </section>
 
        <!-- Section label -->
@@ -154,44 +155,44 @@
 
        <!-- Discovery and Research -->
        <section class="discovery-research">
-         <article class="subsection">
+         <article class="subsection narrow">
            <h1>USER SURVEY</h1>
            <p>While I made some assumptions on which features would improve
              existing cloud services, I needed to survey real users to better
              understand their cloud storage needs.</p>
-            <section class="colored findings">
-              <h3 class="key-findings">KEY FINDINGS</h3>
-              <div class="key-findings">
-                <div class="third mobile-half">
-                  <h4>86%</h4>
-                  <p>of those surveyed use Google Drive, followed by 58% for
-                     iCloud and 41% for DropBox.</p>
-                </div>
-                <div class="third mobile-half">
-                  <h4>92%</h4>
-                  <p>most often use their cloud storage service on a desktop computer.</p>
-                </div>
-                <div class="third mobile-half">
-                  <h4>92%</h4>
-                  <p>store photos on cloud services, followed by 75% for
-                    text-based documents and 71% for videos.</p>
-                </div>
-                <div class="third mobile-half">
-                  <h4>79%</h4>
-                  <p>use cloud services for file storage, followed by 71% for
-                    file organization and 67 percent for file sharing.</p>
-                </div>
-                <div class="third mobile-half">
-                  <h4>54%</h4>
-                  <p>use their cloud storage service to organize web content.</p>
-                </div>
-                <div class="third mobile-half">
-                  <h4>63%</h4>
-                  <p>pay for extra storage, but 67% pay less than $5/month.</p>
-                </div>
-              </div>
-            </section>
           </article>
+          <section class="colored findings">
+            <h3 class="key-findings">KEY FINDINGS</h3>
+            <div class="key-findings">
+              <div class="third mobile-half">
+                <h4>86%</h4>
+                <p>of those surveyed use Google Drive, followed by 58% for
+                   iCloud and 41% for DropBox.</p>
+              </div>
+              <div class="third mobile-half">
+                <h4>92%</h4>
+                <p>most often use their cloud storage service on a desktop computer.</p>
+              </div>
+              <div class="third mobile-half">
+                <h4>92%</h4>
+                <p>store photos on cloud services, followed by 75% for
+                  text-based documents and 71% for videos.</p>
+              </div>
+              <div class="third mobile-half bottom">
+                <h4>79%</h4>
+                <p>use cloud services for file storage, followed by 71% for
+                  file organization and 67 percent for file sharing.</p>
+              </div>
+              <div class="third mobile-half bottom">
+                <h4>54%</h4>
+                <p>use their cloud storage service to organize web content.</p>
+              </div>
+              <div class="third mobile-half bottom">
+                <h4>63%</h4>
+                <p>pay for extra storage, but 67% pay less than $5/month.</p>
+              </div>
+            </div>
+          </section>
           <article class="subsection personas">
             <h1>USER PERSONAS</h1>
             <section class="persona">
@@ -235,7 +236,7 @@
                   <li>Store photos and videos in a centralized location</li>
                   <li>Organize photos and videos into folders</li>
                   <li>Share photos and videos</li>
-                  <li>Find a cloud service offering more free storage</li>
+                  <li>More free storage</li>
                 </ul>
                 <h3>FRUSTRATIONS</h3>
                 <ul>
@@ -245,7 +246,7 @@
               </div>
             </section>
           </article>
-          <article class="subsection">
+          <article class="subsection competitive">
             <h1>COMPETITIVE ANALYSIS</h1>
             <p class="first-paragraph">In order to better understand the competition, I needed to analyze
               the strengths and weaknesses of some of the big names in cloud storage.
@@ -506,7 +507,7 @@
 
         <!-- Reflection -->
         <section class="reflection">
-          <article class=subsection>
+          <article class="subsection">
             <h1>REFLECTION</h1>
             <p>Creating canopy was a tremendous learning experience for me as it was the first project that I worked on as lead designer. While I feel that canopy could succeed as a cloud service that centralizes users’ data in an intuitive and enjoyable way, there are a number of areas that I could improve upon. A short list includes:</p>
             <ul>
@@ -531,22 +532,22 @@
         </section>
 
         <!-- Footer -->
-      <footer>
-         <ul class="contacts">
-           <li>
-             <img src="images/arrow-dark.svg" alt="arrow">
-             <a href="mailto:maxschnitzer95@gmail.com">EMAIL</a>
-           </li>
-           <li>
-             <img src="images/arrow-dark.svg" alt="arrow">
-             <a href="linkedin.com">LINKEDIN</a>
-           </li>
-           <li>
-             <img src="images/arrow-dark.svg" alt="arrow">
-             <a href="#">RESUME</a>
-           </li>
-         </ul>
-       </footer>
+        <footer>
+          <ul class="contacts">
+            <li>
+              <img src="images/arrow-dark.svg" alt="arrow">
+              <a href="mailto:maxschnitzer95@gmail.com">EMAIL</a>
+            </li>
+            <li>
+              <img class="padding-left" src="images/arrow-dark.svg" alt="arrow">
+              <a href="linkedin.com">LINKEDIN</a>
+            </li>
+            <li>
+              <img class="padding-left" src="images/arrow-dark.svg" alt="arrow">
+              <a href="#">RESUME</a>
+            </li>
+          </ul>
+        </footer>
      </div>
      <script src="javascript/projects.js"></script>
   </body>
