--- a/canopy.html
+++ b/canopy.html
@@ -47,7 +47,7 @@
        </section>
 
        <!-- Project specs -->
-       <section class="colored">
+       <section class="colored specs">
          <div class="center">
            <div class="small-fourth align-left mobile-full">
              <h2 class="h2 align-left">SPECS</h2>
@@ -118,7 +118,7 @@
 
        <!-- Overview -->
        <section class="overview">
-         <article class="subsection narrow">
+         <article class="subsection problems narrow">
            <h1>THE PROBLEMS</h1>
            <p>Our world is becoming more digital by the day, and with that,
               millions of people have growing data storage needs. While the
@@ -131,7 +131,7 @@
               <li>Expensive storage</li>
             </ul>
          </article>
-         <article class="subsection narrow solutions">
+         <article class="subsection solutions narrow">
            <h1>THE SOLUTIONS</h1>
            <p>I employed an iterative design approach throughout the entire
              project. By consistently testing my designs, I was able to hone
@@ -170,8 +170,8 @@
                    iCloud and 41% for DropBox.</p>
               </div>
               <div class="third mobile-half">
-                <h4>92%</h4>
-                <p>most often use their cloud storage service on a desktop computer.</p>
+                <h4>79%</h4>
+                <p>use cloud services for file storage, followed by 71% for file organization and 67% for file sharing.</p>
               </div>
               <div class="third mobile-half">
                 <h4>92%</h4>
@@ -179,9 +179,8 @@
                   text-based documents and 71% for videos.</p>
               </div>
               <div class="third mobile-half bottom">
-                <h4>79%</h4>
-                <p>use cloud services for file storage, followed by 71% for
-                  file organization and 67 percent for file sharing.</p>
+                <h4>92%</h4>
+                <p>most often use their cloud storage service on a desktop computer.</p>
               </div>
               <div class="third mobile-half bottom">
                 <h4>54%</h4>
@@ -193,7 +192,7 @@
               </div>
             </div>
           </section>
-          <article class="subsection personas">
+          <article class="skinny subsection personas">
             <h1>USER PERSONAS</h1>
             <section class="persona">
               <img class="persona-pic" src="images/persona-josh.jpg" alt="">
@@ -246,39 +245,39 @@
               </div>
             </section>
           </article>
-          <article class="subsection competitive">
+          <article class="skinny subsection competitive">
             <h1>COMPETITIVE ANALYSIS</h1>
-            <p class="first-paragraph">In order to better understand the competition, I needed to analyze
+            <p class="indented first-paragraph">In order to better understand the competition, I needed to analyze
               the strengths and weaknesses of some of the big names in cloud storage.
               Google Drive, DropBox and iCloud were the most used cloud services in my survey group.</p>
             <section class="colored google-drive">
               <h3>GOOGLE DRIVE SWOT ANALYSIS</h3>
               <div class="SWOT">
-                <div class="small-fourth align-left mobile-full">
-                  <h2 class="h4 align-left">STRENGTHS</h2>
+                <div class="equal small-fourth align-left mobile-full">
+                  <h2 class="h2 align-left">STRENGTHS</h2>
                   <ul class="med-text">
                     <li>Clean, easy-to-navigate interface</li>
                     <li>Strong content creation</li>
                     <li>Integration across all Google Apps</li>
                   </ul>
                 </div>
-                <div class="small-fourth align-left mobile-full">
-                  <h2 class="h4 align-left">WEAKNESSES</h2>
+                <div class="equal small-fourth align-left mobile-full">
+                  <h2 class="h2 align-left">WEAKNESSES</h2>
                   <ul class="med-text">
                     <li>Security/privacy concerns</li>
                     <li>Some competitors offer more free storage</li>
                     <li>Unable to organize web content</li>
                   </ul>
                 </div>
-                <div class="small-fourth align-left mobile-full">
-                  <h2 class="h4 align-left">OPPORTUNITIES</h2>
+                <div class="equal small-fourth align-left mobile-full">
+                  <h2 class="h2 align-left">OPPORTUNITIES</h2>
                   <ul class="med-text">
                     <li>Rapidly growing demand for data storage</li>
                     <li>Many people switching to cloud storage</li>
                   </ul>
                 </div>
-                <div class="small-fourth align-left mobile-full">
-                  <h2 class="h4 align-left">THREATS</h2>
+                <div class="equal small-fourth align-left mobile-full">
+                  <h2 class="h2 align-left">THREATS</h2>
                   <ul class="med-text">
                     <li>Rapidly growing competition</li>
                     <li>Many users have concerns with data safety</li>
@@ -286,7 +285,7 @@
                 </div>
               </div>
             </section>
-            <p>After perfoming a SWOT analysis on these three competitors, I found that a new
+            <p class="indented">After perfoming a SWOT analysis on these three competitors, I found that a new
               cloud service might succeed in the market by drawing heavily from Google Drive’s
               design language while creating an intuitive design system, further modernizing the interface,
               enabling web content organization and offering more free storage.</p>
@@ -300,7 +299,7 @@
 
        <!-- Information Architecture -->
        <section class="information-architecture">
-         <article class="subsection">
+         <article class="subsection narrow">
            <h1>USER STORIES</h1>
            <p>After gaining a better understanding of the cloud storage market and its users,
              I was able to create a comprehensive list of user stories. Over half of the stories
@@ -320,20 +319,22 @@
               </div>
             </section>
          </article>
-         <article class="subsection">
+         <article class="skinny subsection">
             <h1>USER FLOWS</h1>
             <div class="user-flow">
-             <h6>File Upload Flow</h6>
-             <img class="upload chart" src="images/upload-flow.svg" alt="upload flow">
+             <h6 class="indented">File Upload Flow</h6>
+             <img class="upload chart vertical" src="images/upload-flow.svg" alt="upload flow">
+             <img class="upload chart horizontal" src="images/upload-flow-horizontal.svg" alt="upload flow horizontal">
             </div>
             <div class="user-flow">
-             <h6>Log-in Flow</h6>
-             <img class="log-in chart" src="images/log-in-flow.svg" alt="upload flow">
+             <h6 class="indented">Log-in Flow</h6>
+             <img class="log-in chart vertical" src="images/log-in-flow.svg" alt="log-in flow">
+             <img class="log-in chart horizontal" src="images/log-in-flow-horizontal.svg" alt="log-in flow horizontal">
             </div>
          </article>
-         <article class="subsection">
+         <article class="skinny subsection wireframes">
            <h1>WIREFRAMES</h1>
-           <h6 class="less-space">Sketches</h6>
+           <h6 class="less-space indented">Sketches</h6>
            <div class="slideshow-container">
             <div class="image-container">
               <img src="images/dashboard-sketch.png" class="image fade" alt="dashboard sketch"/>
@@ -348,10 +349,10 @@
               <span class="dot" onclick="currentSlide(2)"></span>
             </div>
           </div>
-          <h6 class="less-space">Digital</h6>
+          <h6 class="less-space indented">Digital</h6>
             <div style="padding:66.54% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/445915728?title=0&byline=0&portrait=0" style="position:absolute;top:0;left:0;width:100%;height:100%;" allow="autoplay; fullscreen" allowfullscreen></iframe></div>
          </article>
-         <article class="subsection under-video">
+         <article class="narrow subsection under-video">
            <h1>WIREFRAME TESTING</h1>
            <p>After testing three potential users, I received some very useful
              feedback that informed future iterations:</p>
@@ -371,7 +372,7 @@
 
         <!-- Branding -->
         <section class="branding">
-          <article class="subsection">
+          <article class="narrow subsection">
             <h1>THE BRAND</h1>
             <p class="first-paragraph">The majority of my surveyed users were under 30 years old, so I wanted
               to design a brand that felt sleek and modern. To differentiate my brand
@@ -383,10 +384,10 @@
               nurture and protect users’ data. Many trees link up to form a canopy, just as many
               files link up to form a cloud drive.</p>
           </article>
-          <article class="subsection">
+          <article class="skinny subsection">
             <h1>LOGO DESIGN</h1>
-            <h6 class="less-space">Brainstorming</h6>
-            <div class="slideshow-container">
+            <h6 class="less-space indented">Brainstorming</h6>
+            <div class="slideshow-container image-padding-bottom">
              <div class="image-container2">
                <img src="images/brainstorming-sketch.png" class="image fade" alt="brainstorming sketch"/>
              </div>
@@ -400,25 +401,27 @@
                <span class="dot2" onclick="currentSlide2(2)"></span>
              </div>
            </div>
-           <h6 class="less-space">Digital</h6>
-           <p class="first-paragraph">Canopy’s logo was created by arranging three circles, three triangles and one
-             rectangle into a cloud shape. Triangles attached to circles at either end create
-             two leaves, representing the leaves of a canopy. The logo sits above the text,
-             much like a canopy exists at the top of the forest.</p>
-            <img class="full-width" src="images/digital-logos.svg" alt="digital logos">
+           <h6 class="less-space indented">Digital</h6>
+            <img class="full-width image-padding-bottom" src="images/digital-logos.svg" alt="digital logos">
+            <p class="first-paragraph narrow">Canopy’s logo was created by arranging three circles, three triangles and one
+              rectangle into a cloud shape. Triangles attached to circles at either end create
+              two leaves, representing the leaves of a canopy. The logo sits above the text,
+              much like a canopy exists at the top of the forest.</p>
           </article>
-          <article class="subsection">
+          <article class="skinny subsection">
             <h1>COLOR PALETTE</h1>
-            <p class="first-paragraph">I went with a warm, monochromatic green color scheme to stand out from
+            <p class="narrow first-paragraph">I went with a warm, monochromatic green color scheme to stand out from
               the (mostly blue) competition.</p>
-            <img class="full-width space" src="images/color-palette.svg" alt="color palette">
+            <img class="full-width space color-palette-mobile" src="images/color-palette.svg" alt="color palette">
+            <img class="full-width space color-palette-desktop" src="images/color-palette-desktop.svg" alt="color palette">
           </article>
-          <article class="subsection">
+          <article class="skinny subsection">
             <h1>TYPOGRAPHY</h1>
-            <p class="first-paragraph">Poppins is a sans serif geometric typeface that creates a modern yet warm
+            <p class="narrow first-paragraph">Poppins is a sans serif geometric typeface that creates a modern yet warm
               atmosphere. Open Sans complements Poppins well as it is very readable and renders quite nicely on
               the browser.</p>
-            <img class="typography space" src="images/typography.svg" alt="typography">
+            <img class="typography space typography-mobile" src="images/typography.svg" alt="typography">
+            <img class="typography space typography-desktop" src="images/typography-desktop.svg" alt="typography">
           </article>
         </section>
 
@@ -429,10 +432,10 @@
 
         <!-- Visual Design -->
         <section class="visual-design">
-          <article class="subsection">
+          <article class="hifi-mockups skinny subsection">
             <h1>HI-FIDELITY MOCKUPS</h1>
-            <p>I coupled my wireframes and branding to create hi-fi mockups. Some features included:</p>
-            <ul>
+            <p class="indented">I coupled my wireframes and branding to create hi-fi mockups. Some features included:</p>
+            <ul class="narrow">
              <li>Modern homepage with a dark green background</li>
              <li>Illustrations to add a warm, human element</li>
              <li>Added product features, storage plans and testimonials to homepage</li>
@@ -442,16 +445,18 @@
            </ul>
           <img class="full-width space" src="images/first-hifi-mockups.png" alt="first hifi mockups">
           </article>
-          <article class="subsection">
+          <article class="skinny subsection">
             <h1>PREFERENCE TESTING</h1>
-            <img class="full-width space" src="images/preference-A.png" alt="design A">
-            <h2 class="preference-h2">0%</h2>
-            <p class="first-paragraph">of users preferred this design. They thought the contrast between
-              the dark and light backgrounds was too stark.</p>
-            <img class="full-width space" src="images/preference-B.png" alt="design A">
-            <h2 class="preference-h2">100%</h2>
-            <p>of users preferred this design. They thought the dark-to-light green transition was easier
-              on the eyes.</p>
+            <div class="preference-test A">
+              <img class="full-width space" src="images/preference-A.png" alt="design A">
+              <h2 class="preference-h2">0%</h2>
+              <p class="first-paragraph">of users preferred this design. They thought the contrast between the dark and light backgrounds was too stark.</p>
+            </div>
+            <div class="preference-test B">
+              <img class="full-width space" src="images/preference-B.png" alt="design B">
+              <h2 class="preference-h2">100%</h2>
+              <p>of users preferred this design. They thought the dark-to-light green transition was easier on the eyes.</p>
+            </div>
           </article>
         </section>
 
@@ -462,9 +467,9 @@
 
         <!-- Final Testing and Prototypes -->
         <section class="final-testing">
-          <article class="subsection less-margin">
+          <article class="skinny subsection less-margin">
             <h1>FINAL TESTING</h1>
-            <div class="slideshow-container">
+            <div class="slideshow-container mobile-slider">
              <div class="image-container3">
                <img src="images/new-folder-button.svg" class="image fade space" alt="new folder button"/>
              </div>
@@ -482,8 +487,26 @@
                <span class="dot3" onclick="currentSlide3(3)"></span>
              </div>
            </div>
+           <div class="slideshow-container desktop-slider">
+            <div class="image-container4">
+              <img src="images/new-folder-button-desktop.svg" class="image fade space" alt="new folder button"/>
+            </div>
+            <div class="image-container4">
+              <img src="images/link-previews-desktop.svg" class="image fade space" alt="link previews"/>
+            </div>
+            <div class="image-container4">
+              <img src="images/share-star-shortcuts-desktop.svg" class="image fade space" alt="share/star shortcuts"/>
+            </div>
+            <a class=" arrow prev" onclick="newSlide4(-1)"></a>
+            <a class=" arrow next" onclick="newSlide4(1)"></a>
+            <div class="dot-container">
+              <span class="dot4" onclick="currentSlide4(1)"></span>
+              <span class="dot4" onclick="currentSlide4(2)"></span>
+              <span class="dot4" onclick="currentSlide4(3)"></span>
+            </div>
+          </div>
           </article>
-          <article class="subsection">
+          <article class="skinny subsection">
             <h1>FINAL PROTOTYPE</h1>
               <div style="padding:66.54% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/445893799?title=0&byline=0&portrait=0" style="position:absolute;top:0;left:0;width:100%;height:100%;" allow="autoplay; fullscreen" allowfullscreen></iframe></div>
           </article>
@@ -507,7 +530,7 @@
 
         <!-- Reflection -->
         <section class="reflection">
-          <article class="subsection">
+          <article class="narrow subsection">
             <h1>REFLECTION</h1>
             <p>Creating canopy was a tremendous learning experience for me as it was the first project that I worked on as lead designer. While I feel that canopy could succeed as a cloud service that centralizes users’ data in an intuitive and enjoyable way, there are a number of areas that I could improve upon. A short list includes:</p>
             <ul>
