--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@
 
   <body>
      <div class="container">
-       <header class="nav">
+       <header id="nav">
          <a href="index.html">
            <div class="logos">
              <img class="logo-visible" src="images/logo-dark.svg" alt="personal logo">
