--- a/canopy.html
+++ b/canopy.html
@@ -17,7 +17,7 @@
      <div class="container">
 
        <!-- Navigation -->
-       <header class="nav">
+       <header id="nav">
          <a href="index.html">
            <div class="logos">
              <img class ="logo-visible" src="images/logo-dark.svg" alt="personal logo">
@@ -569,9 +569,14 @@
               <img class="padding-left" src="images/arrow-dark.svg" alt="arrow">
               <a href="#">RESUME</a>
             </li>
+            <li class="back-to-top"><a href="#nav">
+              <img src="images/arrow-to-top.svg" alt="arrow to top">
+              <p>Back to top</p></a>
+            </li>
           </ul>
         </footer>
      </div>
+     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
      <script src="javascript/projects.js"></script>
   </body>
 
