--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
      <div class="container">
 
        <!-- Navigation -->
-       <header class="nav">
+       <header id="nav">
          <a href="index.html">
            <div class="logos">
              <img class ="logo-visible" src="images/logo-dark.svg" alt="personal logo">
@@ -25,9 +25,6 @@
            </div>
          </a>
          <ul class="tabs">
-           <li class="work">
-             <a href="#">Work</a>
-           </li>
            <li class="about">
              <a href="about.html">About</a>
            </li>
