added dark mode

--- a/about.html
+++ b/about.html
@@ -28,7 +28,7 @@
              <a href="about.html">About</a>
            </li>
            <li class="moon">
-             <a href="index-dark.html"><img src="images/moon.svg" alt="dark mode"></a>
+             <a href="about-dark.html"><img src="images/moon.svg" alt="dark mode"></a>
            </li>
          </ul>
        </header>
