--- a/canopy.html
+++ b/canopy.html
@@ -32,7 +32,7 @@
              <a href="about.html">About</a>
            </li>
            <li class="moon">
-             <a href="index-dark.html"><img src="images/moon.svg" alt="dark mode"></a>
+             <a href="canopy-dark.html"><img src="images/moon.svg" alt="dark mode"></a>
            </li>
          </ul>
        </header>
