--- a/index-dark.html
+++ b/index-dark.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
 
-<!--  <head>
+  <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Max Schnitzer Portfolio!!</title>
+    <title>Max Schnitzer Portfolio</title>
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style-dark.css">
     <link href="https://fonts.googleapis.com/css2?family=Space+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
@@ -12,8 +12,12 @@
   </head>
 
   <body>
+
+    <!-- Page container -->
      <div class="container">
-       <header class="nav">
+
+       <!-- Navigation -->
+       <header id="nav">
          <a href="index.html">
            <div class="logos">
              <img class ="logo-visible" src="images/logo-light.svg" alt="personal logo">
@@ -21,42 +25,69 @@
            </div>
          </a>
          <ul class="tabs">
-           <li class="work">
-             <a href="#">Work</a>
-           </li>
            <li class="about">
-             <a href="about.html">About</a>
+             <a href="about-dark.html">About</a>
            </li>
            <li class="sun">
              <a href="index.html"><img src="images/sun.svg" alt="light mode"></a>
            </li>
          </ul>
        </header>
+
+       <!-- Hero statement -->
        <section class="hero">
          <h1> <span class="hero-italic">Hello, I'm</span>
           <span class="about-me">
-            <a class="boxlink" href="about.html">Max&nbsp;Schnitzer</a>.
+            <a class="boxlink" href="about-dark.html">Max&nbsp;Schnitzer</a>.
           </span>
             <span class="hero-italic">I'm a product designer focused on
                 user-centered</span>
           <span class="projects">
-            <a class="boxlink" href="about.html">digital&nbsp;experiences</a>.
+            <a class="boxlink" href="#case-studies">digital&nbsp;experiences</a>.
           </span>
-            <span class="hero-italic">My work is inspired by </span><span class="carousel">architecture</span>.</h1>
+            <span class="hero-italic">My work is inspired by </span><span id="carousel"><h3>architecture.</h3></span></h1>
        </section>
-       <section class="case-studies">
+
+       <!-- Case Studies -->
+       <section id="case-studies">
          <h2>canopy</h2>
          <h3>Cloud Storage App</h3>
-         <article class="canopy-background">
-          <img class="canopy-home" src="images/canopy-dashboard.png" alt="canopy dashboard">
-         </article>
+         <div class="project-container">
+          <a href="canopy-dark.html"><img class="project-image" src="images/canopy-dashboard.png" alt="canopy dashboard"></a>
+          <div class="middle">
+            <span class="hover-text">View case study</span>
+          </div>
+         </div>
          <h2>Capstone Project</h2>
          <h3>Book Recommendation App</h3>
-         <article class="capstone-background">
-         <img class="canopy-home" src="images/canopy-dashboard.png" alt="canopy dashboard">
-         </article>
+         <div class="project-container capstone">
+           <a href="#"><img class="project-image" src="images/canopy-dashboard.png" alt="canopy dashboard"></a>
+           <div class="middle">
+             <span class="hover-text">View case study</span>
+           </div>
+         </div>
        </section>
+
+       <!-- Footer -->
+       <footer>
+         <ul class="contacts">
+           <li>
+             <img src="images/arrow-light.svg" alt="arrow">
+             <a href="mailto:maxschnitzer95@gmail.com">EMAIL</a>
+           </li>
+           <li>
+             <img class="padding-left" src="images/arrow-light.svg" alt="arrow">
+             <a href="linkedin.com">LINKEDIN</a>
+           </li>
+           <li>
+             <img class="padding-left" src="images/arrow-light.svg" alt="arrow">
+             <a href="#">RESUME</a>
+           </li>
+         </ul>
+       </footer>
      </div>
+     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+     <script src="javascript/index.js"></script>
   </body>
 
 </html>
