added padding on index

--- a/about-dark.html
+++ b/about-dark.html
@@ -57,11 +57,11 @@
            </li>
            <li>
              <img class="padding-left" src="images/arrow-light.svg" alt="arrow">
-             <a href="linkedin.com">LINKEDIN</a>
+             <a href="linkedin.com" target="_blank">LINKEDIN</a>
            </li>
            <li>
              <img class="padding-left" src="images/arrow-light.svg" alt="arrow">
-             <a href="My resume PDF">RESUME</a>
+             <a href="My resume PDF" target="_blank">RESUME</a>
            </li>
          </ul>
        </footer>
