--- a/index.html
+++ b/index.html
@@ -77,11 +77,11 @@
            </li>
            <li>
              <img class="padding-left" src="images/arrow-dark.svg" alt="arrow">
-             <a href="linkedin.com">LINKEDIN</a>
+             <a href="linkedin.com" target="_blank">LINKEDIN</a>
            </li>
            <li>
              <img class="padding-left" src="images/arrow-dark.svg" alt="arrow">
-             <a href="#">RESUME</a>
+             <a href="#" target="_blank">RESUME</a>
            </li>
          </ul>
        </footer>
