--- a/canopy.html
+++ b/canopy.html
@@ -563,11 +563,11 @@
             </li>
             <li>
               <img class="padding-left" src="images/arrow-dark.svg" alt="arrow">
-              <a href="linkedin.com">LINKEDIN</a>
+              <a href="linkedin.com" target="_blank">LINKEDIN</a>
             </li>
             <li>
               <img class="padding-left" src="images/arrow-dark.svg" alt="arrow">
-              <a href="#">RESUME</a>
+              <a href="#" target="_blank">RESUME</a>
             </li>
             <li class="back-to-top"><a href="#nav">
               <img src="images/arrow-to-top.svg" alt="arrow to top">
