--- a/canopy.html
+++ b/canopy.html
@@ -569,11 +569,11 @@
               <img class="padding-left" src="images/arrow-dark.svg" alt="arrow">
               <a href="#" target="_blank">RESUME</a>
             </li>
-            <li class="back-to-top"><a href="#nav">
-              <img src="images/arrow-to-top.svg" alt="arrow to top">
-              <p>Back to top</p></a>
-            </li>
           </ul>
+          <div class="back-to-top"><a href="#nav">
+            <img src="images/arrow-to-top.svg" alt="arrow to top">
+            <p>Back to top</p></a>
+          </div>
         </footer>
      </div>
      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
