--- a/canopy-dark.html
+++ b/canopy-dark.html
@@ -43,6 +43,9 @@
          </div>
        </section>
 
+      <!-- Back-to-top button -->
+      <a href="#" id="scroll" style="display: none;"><span></span></a>
+
        <!-- Project specs -->
        <section class="colored specs">
          <div class="center">
@@ -569,12 +572,11 @@
               <a href="#" target="_blank">RESUME</a>
             </li>
           </ul>
-          <div class="back-to-top"><a href="#nav">
-            <img src="images/arrow-to-top-white.svg" alt="arrow to top">
-            <p>Back to top</p></a>
-          </div>
         </footer>
-     </div>
+        <!--<div class="back-to-top"><a href="#nav">
+          <img src="images/arrow-to-top.svg" alt="arrow to top">
+          <p>Back to top</p></a>
+     </div>-->
      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
      <script src="javascript/projects.js"></script>
   </body>
