--- a/canopy.html
+++ b/canopy.html
@@ -46,6 +46,9 @@
          </div>
        </section>
 
+       <!-- Back-to-top button -->
+       <a href="#" id="scroll" style="display: none;"><span></span></a>
+
        <!-- Project specs -->
        <section class="colored specs">
          <div class="center">
@@ -570,9 +573,9 @@
               <a href="#" target="_blank">RESUME</a>
             </li>
           </ul>
-          <div class="back-to-top"><a href="#nav">
+          <!--<div class="back-to-top"><a href="#nav">
             <img src="images/arrow-to-top.svg" alt="arrow to top">
-            <p>Back to top</p></a>
+            <p>Back to top</p></a>-->
           </div>
         </footer>
      </div>
