--- a/index-dark.html
+++ b/index-dark.html
@@ -53,18 +53,18 @@
          <h2>canopy</h2>
          <h3>Cloud Storage App</h3>
          <div class="project-container">
-          <a href="canopy-dark.html"><img class="project-image" src="images/canopy-dashboard.png" alt="canopy dashboard"></a>
+          <a href="canopy-dark.html"><img class="project-image" src="images/canopy-dashboard.png" alt="canopy dashboard">
           <div class="middle">
             <span class="hover-text">View case study</span>
-          </div>
+          </div></a>
          </div>
          <h2>Capstone Project</h2>
          <h3>Book Recommendation App</h3>
          <div class="project-container capstone">
-           <a href="#"><img class="project-image" src="images/canopy-dashboard.png" alt="canopy dashboard"></a>
+           <a href="#"><img class="project-image" src="images/canopy-dashboard.png" alt="canopy dashboard">
            <div class="middle">
              <span class="hover-text">View case study</span>
-           </div>
+           </div></a>
          </div>
        </section>
 
