--- a/about.html
+++ b/about.html
@@ -66,6 +66,17 @@
          </ul>
        </footer>
      </div>
+
+         <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-176422150-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-176422150-1');
+    </script>
+
   </body>
 
 </html>
