--- a/canopy-dark.html
+++ b/canopy-dark.html
@@ -579,6 +579,17 @@
      </div>-->
      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
      <script src="javascript/projects.js"></script>
+
+         <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-176422150-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-176422150-1');
+    </script>
+
   </body>
 
 </html>
