added contact page mobile

--- a/about-dark.html
+++ b/about-dark.html
@@ -21,11 +21,11 @@
            </div>
          </a>
          <ul class="tabs">
-           <li class="work">
-             <a href="#">Work</a>
-           </li>
-           <li class="about">
+           <li class="about active-tab">
              <a href="about-dark.html">About</a>
+           </li>
+           <li class="contact">
+             <a href="contact-dark.html">Contact</a>
            </li>
            <li class="sun">
              <a href="about.html"><img src="images/sun.svg" alt="light mode"></a>
