--- a/index-dark.html
+++ b/index-dark.html
@@ -28,6 +28,9 @@
            <li class="about">
              <a href="about-dark.html">About</a>
            </li>
+           <li class="contact">
+             <a href="contact-dark.html">Contact</a>
+           </li>
            <li class="sun">
              <a href="index.html"><img src="images/sun.svg" alt="light mode"></a>
            </li>
