--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
            <li class="about">
              <a href="about.html">About</a>
            </li>
+           <li class="contact">
+             <a href="contact.html">Contact</a>
+           </li>
            <li class="moon">
              <a href="index-dark.html"><img src="images/moon.svg" alt="dark mode"></a>
            </li>
@@ -71,10 +74,10 @@
        <!-- Footer -->
        <footer>
          <ul class="contacts">
-           <li>
+           <!--<li>
              <img src="images/arrow-dark.svg" alt="arrow">
              <a href="mailto:maxschnitzer95@gmail.com">EMAIL</a>
-           </li>
+           </li>-->
            <li>
              <img class="padding-left" src="images/arrow-dark.svg" alt="arrow">
              <a href="linkedin.com" target="_blank">LINKEDIN</a>
