--- a/canopy.html
+++ b/canopy.html
@@ -25,11 +25,11 @@
            </div>
          </a>
          <ul class="tabs">
-           <li class="work">
-             <a href="#">Work</a>
-           </li>
            <li class="about">
              <a href="about.html">About</a>
+           </li>
+           <li class="contact">
+             <a href="contact.html">Contact</a>
            </li>
            <li class="moon">
              <a href="canopy-dark.html"><img src="images/moon.svg" alt="dark mode"></a>
