contact form edits

--- a/about.html
+++ b/about.html
@@ -46,22 +46,22 @@
 
             <p>In my free time, you can find me making art, living out my NBA dreams at the local rec center, honing my coding skills, and reassuring my dog that he’s a very good boy.</p>
 
-            <p class="free-time">Please <span><a href="mailto:maxschnitzer95@gmail.com">reach out!</a></span> I’d love to connect.</p>
+            <p class="free-time">Please reach out! I’d love to connect.</p>
           </div>
        </section>
        <footer>
          <ul class="contacts smaller-margin">
-           <li>
+           <!--<li>
              <img src="images/arrow-dark.svg" alt="arrow">
              <a href="mailto:maxschnitzer95@gmail.com">EMAIL</a>
-           </li>
+           </li>-->
            <li>
-             <img class="padding-left" src="images/arrow-dark.svg" alt="arrow">
+             <img src="images/arrow-dark.svg" alt="arrow">
              <a href="linkedin.com" target="_blank">LINKEDIN</a>
            </li>
            <li>
              <img class="padding-left" src="images/arrow-dark.svg" alt="arrow">
-             <a href="My resume PDF" target="_blank">RESUME</a>
+             <a href="#" target="_blank">RESUME</a>
            </li>
          </ul>
        </footer>
