--- a/contact-dark.html
+++ b/contact-dark.html
@@ -51,7 +51,7 @@
 
         <!-- your other form fields go here -->
 
-        <button class="form-label send-button" type="submit">Send</button>
+        <button class="form-label send-button" type="submit" target="_blank">Send</button>
       </form>
 
       <footer>
@@ -61,7 +61,7 @@
             <a href="mailto:maxschnitzer95@gmail.com">EMAIL</a>
           </li>-->
           <li>
-            <img class="padding-left" src="images/arrow-light.svg" alt="arrow">
+            <img src="images/arrow-light.svg" alt="arrow">
             <a href="linkedin.com" target="_blank">LINKEDIN</a>
           </li>
           <li>
