--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
              <a href="mailto:maxschnitzer95@gmail.com">EMAIL</a>
            </li>-->
            <li>
-             <img class="padding-left" src="images/arrow-dark.svg" alt="arrow">
+             <img src="images/arrow-dark.svg" alt="arrow">
              <a href="linkedin.com" target="_blank">LINKEDIN</a>
            </li>
            <li>
