--- a/canopy.html
+++ b/canopy.html
@@ -560,12 +560,12 @@
         <!-- Footer -->
         <footer>
           <ul class="contacts">
-            <li>
+            <!--<li>
               <img src="images/arrow-dark.svg" alt="arrow">
               <a href="mailto:maxschnitzer95@gmail.com">EMAIL</a>
-            </li>
+            </li>-->
             <li>
-              <img class="padding-left" src="images/arrow-dark.svg" alt="arrow">
+              <img src="images/arrow-dark.svg" alt="arrow">
               <a href="linkedin.com" target="_blank">LINKEDIN</a>
             </li>
             <li>
