--- a/index-dark.html
+++ b/index-dark.html
@@ -74,12 +74,12 @@
        <!-- Footer -->
        <footer>
          <ul class="contacts">
+           <!--<li>
+             <img src="images/arrow-dark.svg" alt="arrow">
+             <a href="mailto:maxschnitzer95@gmail.com">EMAIL</a>
+           </li>-->
            <li>
              <img src="images/arrow-light.svg" alt="arrow">
-             <a href="mailto:maxschnitzer95@gmail.com">EMAIL</a>
-           </li>
-           <li>
-             <img class="padding-left" src="images/arrow-light.svg" alt="arrow">
              <a href="linkedin.com" target="_blank">LINKEDIN</a>
            </li>
            <li>
