--- a/canopy.html
+++ b/canopy.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Max Schnitzer Portfolio</title>
+    <link rel="shortcut icon" type="image/svg" href="images/logo-dark.svg">
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Space+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
@@ -228,7 +229,7 @@
                 <h2>SOPHIA</h2>
                 <p class="demographic">26-year-old photographer from Dallas, TX</p>
                 <h3 class="bio">BIO</h3>
-                <p>Sophia is a freelance photographer who has amassed a sizeable
+                <p>Sophia is a freelance photographer who has amassed a sizable
                   following on social media. She works with a number of different
                   clients at a single time, so keeping her photo files organized
                   is a necessity. She has recently ventured into videography, so
